--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: 'printing folder content'
+      - name: 'Before'
         run: ls
 
-      
+      - user: actions/checkout@v3
+
+      - name: 'After'
+        run: ls
