--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,4 +16,4 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: "loge in to docker"
-        run: docker login --username maanar --password dckr_pat_5swR5e9_TZQ0NMcOy1Qc7hO0dII
+        run: docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_TOKEN }}
