--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,3 +17,9 @@ jobs:
 
       - name: "loge in to docker"
         run: docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_TOKEN }}
+
+      -name: "Building docker image"
+       run: docker build -t ${{ secrets.DOCKER_USERNAME }}/myimage .
+
+      -name: "pushing to Docker hub"  
+       run: docker push ${{ secrets.DOCKER_USERNAME }}/myimage
